<resources>
    <string name="app_name">Vizora</string>
    <string name="email">Email-cím</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="openRegistrationLabel">Nincs még fiókod? Regisztrálj!</string>
    <string name="createAccount">Fiók létrehozása</string>
    <string name="fullname">Teljes név</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="register">Regisztráció</string>
    <string name="cancel">Mégse</string>
    <string name="passwordHint">Legalább 8 karakter</string>
    <string name="logout">Kijelentkezés</string>
    <string name="hozz_ad_s">Hozzáadás</string>
    <string name="item_delete">Mérő törlése</string>
    <string name="save_value">Mérőállás rögzítése</string>
    <string name="jelenlegi_meroallas">Jelenlegi mérőállás</string>
    <string name="cim">Cím</string>
    <string name="rogzites">Rögzítés</string>
    <string name="legutobbi">Legutóbbi mérőállás</string>
    <string name="mentes">Mentés</string>
    <string name="modositas">Módosítás</string>
    <string name="frissites">Frissítés</string>
</resources>